--- a/index_test.html
+++ b/index_test.html
@@ -9,7 +9,7 @@
     font-family: Arial, sans-serif;
     text-align: center;
     margin: 0;
-    background-color: #400040;
+    background-color:#c4c0be;
     color:#ffdb99;
     overflow-x: hidden;
   }
@@ -264,3 +264,4 @@
 </script>
 </body>
 </html>
+
